--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="message">
-                <h1>I have bad news for you.</h1>
+                <h1>I have bad news for you</h1>
                 <div class="explanation">
                     <p>The page you are looking for might be removed or is temporarily unavailable.</p>
                 </div>
